Add image loading spinner and transparent preview feature in index.js. Enhance user experience by displaying a loader during image upload and providing a temporary preview while the image is being processed. Update styles in style.css for loader and loading state effects.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             accept="image/*" 
             class="overlay-input-field image-input"
           />
+          <div class="image-loader" id="imageLoader" style="display: none;">
+            <div class="spinner"></div>
+          </div>
         </div>
         
         <div class="overlay-input name-input-overlay" id="nameInputOverlay">
